fix header overlaping content

--- a/src/app/ubs/ubs-user/ubs-user-orders/ubs-user-orders.component.scss
+++ b/src/app/ubs/ubs-user/ubs-user-orders/ubs-user-orders.component.scss
@@ -14,7 +14,6 @@
 .main-header {
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
 }
 
 .main-header-title {
