--- a/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.scss
+++ b/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.scss
@@ -241,7 +241,7 @@ input[type='number'] {
 }
 
 .validMes {
-  height: 20px;
+  height: 30px;
 }
 
 .totalInfo {
@@ -602,7 +602,7 @@ li {
   .add-order-btn {
     height: 40px;
     width: 240px;
-    margin: 16px 0;
+    margin: 16px 0 0;
     text-align: center;
     font-weight: 700;
     color: var(--ubs-quaternary-dark-grey);
@@ -631,6 +631,7 @@ li {
   .header {
     margin: 1rem 0 0;
     text-align: center;
+    line-height: 14px;
 
     .choose-location {
       margin: 1em 0;
